syntax = "proto3";
import "google/protobuf/timestamp.proto";

package protos;

option go_package = "blockchainpb";

service Blockchain{
  rpc AddBlock(AddBlockRequest) returns (AddBlockResponse){}
  rpc GetBlockchain(GetBlockchainRequest) returns (GetBlockchainResponse){}
}

message AddBlockRequest{
  string data  = 1;
}

message AddBlockResponse{
  string hash  = 1;
}

message GetBlockchainRequest {}

message Block{
  int64 index = 1;
  google.protobuf.Timestamp timestamp = 2;
  string hash = 3;
  string prevBlockHash = 4;
  string data = 5;
}

message GetBlockchainResponse {
  repeated Block blocks = 1;
}
